WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134104
CallbackMap::put should be able to take an unwrapped function
https://bugs.webkit.org/show_bug.cgi?id=134104
Summary
CallbackMap::put should be able to take an unwrapped function
mitz
Reported
2014-06-20 07:14:50 PDT
Make it possible to pass an unwrapped function to CallbackMap::put
Attachments
Overload CallbackMap::put
(14.24 KB, patch)
2014-06-20 07:16 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
Overload CallbackMap::put
(14.23 KB, patch)
2014-06-21 13:15 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-06-20 07:16:55 PDT
Created
attachment 233426
[details]
Overload CallbackMap::put
WebKit Commit Bot
Comment 2
2014-06-20 07:19:01 PDT
Attachment 233426
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/GenericCallback.h:190: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2014-06-21 13:15:01 PDT
Created
attachment 233544
[details]
Overload CallbackMap::put
WebKit Commit Bot
Comment 4
2014-06-21 13:16:31 PDT
Attachment 233544
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/GenericCallback.h:190: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 5
2014-06-21 15:26:13 PDT
Committed <
http://trac.webkit.org/r170254
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug